fixed issue with descriptions covering images on academic page until 768px

--- a/css/academic.css
+++ b/css/academic.css
@@ -5,6 +5,11 @@ h1 {
     text-align: center;
 }
 
+hr {
+    border: 3px solid red;
+    width: 100%;
+}
+
 img {
     width: 350px;
     border: 3px solid black;
